--- a/quiz/exception.html
+++ b/quiz/exception.html
@@ -15,6 +15,10 @@
   <button onclick="calculateSquareRoots()">Calculate Square Roots</button>
 
   <script>
+
+    function updateText(){
+
+    }
     function calculateSquareRoots() {
       // Get the input value and convert it to an array of numbers
       const inputElement = document.getElementById('numbersInput');
@@ -24,12 +28,23 @@
       // Using map to calculate the square root of each number
       // Use Math.sqrt(number) to calculate sq root
       const squareRoots = numbers.map(number => {
-        return 0
+        try{
+          if(isNaN(number)){
+            throw `${number} is not valid`
+          }
+          if(number<0) throw `${number} is -ve, cannot do square root}`
+          return Math.sqrt(number);
+        }
+        catch(err){
+          console.error('erro  in number, not valid number')
+
+          }
+      
     });
 
       // Displaying the original and transformed arrays
-      console.log('Original Numbers Array:', numbers);
-      console.log('Square Roots Array:', squareRoots);
+      updateText('Original Numbers Array:', numbers);
+      updateText('Square Roots Array:', squareRoots);
     }
   </script>
 
