--- a/quiz/vars1.html
+++ b/quiz/vars1.html
@@ -3,7 +3,7 @@
         <script>
             // Fix the error in the code below 
             let x = 1;
-            var y = 2;
+            let y = 2;
             {
                 y = y + 1;
                 console.log(x+y);
